src/sections/Hero/hero.scss
.hero {
    height: 100%;
    width: 100%;

.hero_content {
    height: 100%;
    padding: 3rem 2rem 4rem 2rem;

h1 {
    font-size: 4rem;
    font-weight: 600;
    letter-spacing: 2px;
    color: var(--secondary-color);
    font-family: 'Righteous', cursive;
}

h2 {
    font-size: 2.5rem;
    padding: 1rem 0;
    color: #313740;

span {
    //padding: 0 0 1rem 0.8rem;
    padding: 0.6rem;
    font-weight: 500;
    background: var(--primary-color);
    text-align: center;
}
}

p {
    font-size: 1.2rem;
    color: #313740;
    padding: 1rem 0;
}

}

.hero_btn {
    line-height: normal;
    display: flex;
    justify-content: space-between;

.hero_link {
    padding: 15px 20px !important;
    width: 200px;
    font-size: 1.2rem !important;
    font-weight: 600 !important;
    letter-spacing: 1px;
    text-align: center;
    border: none;
    background: #000;
    color: var(--white-color) !important;
    transition: 0.6s all ease;

    &:hover {
      background: #e9d6c4;
      color: var(--dark-color) !important;
      transition: 0.6s all ease;
    }
}
}
}

@media screen and (max-width: 480px) {
    .hero_content {
        height: 100%;
        padding: 2rem 1rem;
    
    h1 {
        font-size: 2.5rem !important;
        font-weight: 600;
        letter-spacing: 1px;
    }
    
    h2 {
        padding: 1rem 0;
    
    span {
        padding: 0 0.8rem;
        font-weight: 600;
        font-size: 1.5rem;
    }
    }

    p {
        font-size: 1rem !important;
    }
   
}   
}

